refactor: refactored updater to be instanced based